--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,76 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+body {
+}
+
+nav {
+	background-color: #808080;
+
+}
+
+nav a {
+	background-color: #ffbf00;
+	color: white;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+nav a:hover {
+	background-color: #ee5f3c;
+}
+
+h1 {
+	color: rgb(2, 132, 130);
+	text-align:center;
+}
+
+h2 {
+	color: #ffd700;
+	text-align:center;
+}
+
+h3 {
+	text-align: center;
+}
+
+p {
+	text-align: center;
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    content: " ";
+    clear: both;
+    height: 0;
+    font-size: 0;
+}
+
+.board {
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+}
+
+.row {
+	display: inline;
+	width: ;
+}
+
+.card {
+	border-radius: 10px;
+	height: 200px;
+	width: 150px;
+	border: 1px solid black;
+	background-color: yellow;
+	float: left;
+	margin: 8%;
+}
+
+.name {
+	color: #ff0000;
+}
+
+footer {
+	text-align: center;
+	background-color: #808080;
+}
